# ChangeLog for net-misc/modemmanager
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/modemmanager/ChangeLog,v 1.46 2013/01/28 05:11:32 tetromino Exp $

  28 Jan 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  -modemmanager-0.4.ebuild, -modemmanager-0.5.2.0-r2.ebuild,
  modemmanager-0.5.2.0-r3.ebuild, modemmanager-0.6.0.0.ebuild:
  Fix license; ModemManager had switched from LGPL to GPL in 2009. Drop old.

  27 Jan 2013; Agostino Sarubbo <ago@gentoo.org> modemmanager-0.6.0.0.ebuild:
  Stable for ppc, wrt bug #448006

  27 Jan 2013; Agostino Sarubbo <ago@gentoo.org> modemmanager-0.6.0.0.ebuild:
  Stable for x86, wrt bug #448006

  27 Jan 2013; Agostino Sarubbo <ago@gentoo.org> modemmanager-0.6.0.0.ebuild:
  Stable for amd64, wrt bug #448006

  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org> modemmanager-0.6.0.0.ebuild:
  Add ~sparc, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> modemmanager-0.6.0.0.ebuild:
  Add ~alpha, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> modemmanager-0.6.0.0.ebuild:
  Add ~ia64, wrt bug #449220

  02 Dec 2012; Samuli Suominen <ssuominen@gentoo.org> modemmanager-0.4.ebuild,
  modemmanager-0.5.2.0-r2.ebuild, modemmanager-0.5.2.0-r3.ebuild,
  modemmanager-0.6.0.0.ebuild:
  Use virtual/udev instead of sys-fs/udev wrt #444398

  11 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
  modemmanager-0.5.2.0-r3.ebuild:
  stable ppc ppc64, bug #430370

  07 Oct 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer as talked with him.

*modemmanager-0.6.0.0 (13 Sep 2012)

  13 Sep 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  -modemmanager-0.4_p20110205-r1.ebuild, -modemmanager-0.5.ebuild,
  -modemmanager-0.5.2.0.ebuild, +modemmanager-0.6.0.0.ebuild:
  Version bump with lots of SMS fixes and improved hardware support. Drop old.

  23 Aug 2012; Markus Meier <maekke@gentoo.org> modemmanager-0.5.2.0-r3.ebuild: