@@ -6,18 +6,21 @@ AUX 01-org.freedesktop.ModemManager.rules 286 SHA256 a47b769279c128633d150899e10
 AUX modemmanager-0.5-glib-2.31.patch 2648 SHA256 7a59df7d4db579ca5b794410956733002ea509b67f0180353a92573a9b9e8671 SHA512 1946608c48e9ea9de5d3343d5a5a20292aa9bfd4a214018e1073648b6edb894cac8d0cdf4879b71f4b803c62df8eb17c3cb2c076e0276115c54e8db820c53d3d WHIRLPOOL ed2e9626e6d782ee1f903fcf142a81302ae37495d5781b92c728723819f3342e9067738d5d15d485271608dc934549a85a05b128febcfed3c606f96ecd3be955
 DIST ModemManager-0.5.2.0.tar.xz 492728 SHA256 7f8b3e1996a24e031df7534e226a0f0c7c2dd8b30322e6c5f4611dc1a848e6c8 SHA512 4c304c08c3740171148f9d5c8102ec18fa128589a5dac0f8bcb172e49d5e236a36b2167fa2e6ab6f592dd54cda24740309618c39b5afa8d020b66e9639e05fc4 WHIRLPOOL faf8db858c6e833a1e7475e626f247838f1f863e18e813eb39b1231fe138d1ade12e6f8f73a3e1768cc00442e313a9717e06b8263dec1198810ece6e2f67ed3e
 DIST ModemManager-0.6.0.0.tar.xz 531136 SHA256 d4468300cf4aa7baf21c8564fa515e578056f34de5a64f452b053331f89e8ae2 SHA512 c4c823a422ee458b70ad5c78feb61de4007507050e8c4789e4397b7bd476ea14b68f9a6b1c95820ec437b97310e34c0396912ea936474638651d868d3828eb4a WHIRLPOOL 2434b39c53f5233c0e03a6b27afa00f0d46927bf29794a643f42b7b797f8c018f69019769903f08398a49093f788f26d2882a735b46be374f903d50752228225
+DIST ModemManager-0.7.990.tar.xz 1101016 SHA256 36547db99fccd7eac1f1dd75178232a61306c6b11e8926b83bcfc3a12c4222ca SHA512 bb0b3527b62d4cb6d1b8faeeab00b026965475e06cfc4109256d5dde4708d5f6b99f8ba4dd2bb82157671cc0026ad7cfed96b0d68ee63e2cfe361149dffe720d WHIRLPOOL 7d9a175af915b5058e2890f7a39aecd66bdf2b4e9524de96b6d5481708df5c1119e744f7ffb1755ad8ec20198521f8a843a90eedc7a28e75006f98326ca96afe
 EBUILD modemmanager-0.5.2.0-r3.ebuild 2972 SHA256 9da52719998532753d0127dd65295299ce27bd3b7a2fb7901268f92e633cc2c8 SHA512 bc8ee700934db94fbc323a4cfaad1ae84d5ab8c707b0f7769ecf1cf9ef4971045f664f38a1f1293319384acebfb9b2c8b198c99812f835ded0009a75dc043ba6 WHIRLPOOL ba4de79b473da0806759748df83a66870ba0a60bf188ea2759f2d1b32f3541e93e908b5f1663db4993a8ac3344d086309940aedd857a48560a3dbd28743b2448
 EBUILD modemmanager-0.6.0.0.ebuild 2991 SHA256 5b9c113a5c069d11318fd3ad519cf9ac41e51120baa8a98db7bdafb258b206bd SHA512 ba0d01aa65ccd8b50d9e5a00cfe07f5204342bfbec7156553d1e1eb0ca5f768d1b078d42211e6a4ff8b9924d8735bfd1821561c999c1b6b2b2ac40764828a983 WHIRLPOOL 1179d9cdb8ea4eb3283fe7b4db8dd3c24dbb8d879fa2b82d86c21d2033fcc32e89c70518dbaf9c7c5fbfd8fdba74687bbcec0a2b0f7fbe6005d90eea8c70e6d9
-MISC ChangeLog 8317 SHA256 31b1b9e85d00bd23a74fb6f5f60cc5183ebaac04a0357fe16c51144a0c5588f7 SHA512 065bb8b10de2662a55f063ed6f59c02565226416451ac6e5c74d5c6cb0f8af3fdd04b72ff34a182e7f621e0e07df42094f93ba637c0a6ec3c175958d5c1ed304 WHIRLPOOL 8b922299718eae7eef4eb1d681bff03cacfd3fed9f549a28f2a28d6fee2c316a065956b68d30f2c4f80787fb30e6b32b70852ca155f424d9150378f7903233a3
-MISC metadata.xml 340 SHA256 9478f7a1074e999d4d3d8215fab4457f45957ca79f36e8b6ade7f3a0e24ef0ed SHA512 a6e9e199cb520af411a5f4694264a679d8a7fa09dd37ba85dfcf45719d747cec79b0848a0849b13eb71f1c48390c5be376dc1d7b33fae34b697c8fd11aa19071 WHIRLPOOL c666ee27dcdc9575e713377d25277a6deeb0a6637e0af930ca65073df8586fa1421a50bf15e80a2d9348e257b1210bca7d5705c7a36ee9030f7d407ec3f5f04f
+EBUILD modemmanager-0.7.990.ebuild 3414 SHA256 7f4865be1c284a2a4320ae4a4b8bdd3e1a7457531a8b29660b31ddac35516cce SHA512 2b413dff576df7e5ad6a5f9220bf20d0b60710c5a6d9ef302410dec7dba204c2a647ed704c80390be62c7612b4b18b9118158eceab0bc189b79a7289b8568d00 WHIRLPOOL 08e72ee5225809ca0412240da753dbf37e3b52f7bf121fd5134e83b6a0afc559cb25b7d746318753fc17abe690e628241c0645ae948796833070943513902bcb
+EBUILD modemmanager-9999.ebuild 3454 SHA256 653bdb46479c34db747a2aac551cdb088cfb1f4f61a6075d318df06fb84d7d92 SHA512 4fd583ef24428a7fd7c4e22387a562fbd39096f0ca8b9441ca272677e6ec9aaa02238675efef5fc34014373d3dda7980c54df8dda1eab876c8d03ee12b36788b WHIRLPOOL 6076b0e65f450ae9529d28dd655a757ed40637436e6f109cf5e827c097e72777b57f4f6e8aeb83d35c6ff646ca89c1bebb08ed2b1df742969280d4d5e5d6968d
+MISC ChangeLog 8700 SHA256 4526ed5719101748a6c6e69d9aa44799de60db68cbd303419792e8d9daf61f33 SHA512 78520b5183a9b455c55bf122953f0f90a7ed6e6bfcabc5fbb86f36ab72d5b0fd21033957f3ec35b834f08943bece6dc0ba0b2a3729d26391cdec211e357fcee7 WHIRLPOOL 0b8555be02b6cda04f8b010847ff1e05fc7eb0319e400c7b6c0596587dd83c0b4f11628e836b61fe32b61633eee7e3c41ad91b30e18967c09a925277db96b8a5
+MISC metadata.xml 587 SHA256 3eff4190df97408f06b36550998acdcb88d5e67a0c5273e96f096f8d465000de SHA512 c3d354b45ddd5642678a3e3ad2f3e458e24e1b437b6b38a3c8471f29c15e4587c14ee9877bcdf6eacffe5051adb8f46090da91061eab7576ec26b034bb5826ff WHIRLPOOL b786fb60690516c72f2b320b2be17818ab5daea3c34b568d7e7ab4c7b0c98b9a9612f420faa1f69cafe427589de84055ff1ce30d1e5333d290b52c121d5525c2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRBgiFAAoJEJ0WA1zPCt1hCRwH/AnE0+iZkx+9QHq/EVLbJTMR
-7pbLlFp7UyPYw7mcZOCLHzm4eGidZx8yt4ttTfgx74YkmZgfAxzk9nwJeTZlK8O5
-XReO2D0aFv0Ght++fVEx5CAxXUmxE/BbiemtBDFy1Ff5qooR1FyvjkLdkmKwMcfQ
-aokQtjoKqMAwAcb810/lIiurdWoKFROZcopYJBORsauNkR7Beuc3YVd4jJItVQn7
-2jtqGKdNfIXZKMPoOlAOveqMH0ISejUsY7TgJPfbHqSkRpw1Ir1X8iuArYANNUpW
-JR0VqpNU5S5+NtFQV5a731JNCs9sJQ5EH8J36ycNzVaVWGwfZ7H/7PY0klgP1iE=
-=ID5V
+iQEcBAEBCAAGBQJRBiMFAAoJEJ0WA1zPCt1hp0wH/1A5LkCT/ZnPgBvNEk0KYVN2
+15ovZLYBKx6Qyo5fjKa53ArpqmXzBm+H95RTcruEgjgLSrZd9vcN28esMU4ZZN4q
+xBZmsXH9b70ZUTs5oVXSH/jLn+g3JV4oKEztVbF9VuXZNaqill3WRiwzefFppbNq
+n6o8I5nLjYPyyRDz3kyErHLD+B5qdRfXnRLI3ZabxIYn+anpXGVa2+vfym0wqlfN
+cQLa6n492pq316iNl9TYQ8HFTBw7LzEvGhZRMb/jRzKQMbHhFl5q6KJ8ZkOpIrQ1
+HXEh9g41LUbH8rqRVraXnG04gKrJ9vkZ7r/pr1p+MyJ+oPXKvStdc28bGCQiuio=
+=79H/
 -----END PGP SIGNATURE-----
