@@ -9,4 +9,10 @@
 		<email>tetromino@gentoo.org</email>
 		<name>Alexandre Rostovtsev</name>
 	</maintainer>
+	<use>
+		<flag name="qmi">Enable support for the QMI modem protocol used by
+			devices with Qualcomm chipsets</flag>
+		<flag name="qmi-newest">Avoid deprecated QMI commands. Warning: may
+			cause incompatibility with older devices.</flag>
+	</use>
 </pkgmetadata>
