@@ -1,6 +1,15 @@
 # ChangeLog for net-misc/modemmanager
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/modemmanager/ChangeLog,v 1.46 2013/01/28 05:11:32 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/modemmanager/ChangeLog,v 1.47 2013/01/28 07:04:24 tetromino Exp $
+
+*modemmanager-9999 (28 Jan 2013)
+*modemmanager-0.7.990 (28 Jan 2013)
+
+  28 Jan 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
+  +modemmanager-0.7.990.ebuild, +modemmanager-9999.ebuild, metadata.xml:
+  Add 0.8 development pre-release and a live git ebuild. 0.8 features improved
+  hardware support, and has a new dbus API which is incompatible with older
+  ModemManager releases.
 
   28 Jan 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
   -modemmanager-0.4.ebuild, -modemmanager-0.5.2.0-r2.ebuild,
